# BubbleFinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze_phases.py
.github/workflows/: bruteforce.yml  release-linux.yml
example/: tiny1.snarls
src/: bruteforce.py  fas.cpp  fas.h  main.cpp  snarls_bruteforce.cpp  ultrabubbles_bruteforce.cpp
src/io/: CMakeLists.txt  gbz_parser.hpp  gfa_parser.hpp  graph_io.cpp  graph_io.hpp
src/tools/: gbz_component_stats.cpp
src/util/: CMakeLists.txt  clsd_interface.cpp  clsd_interface.hpp  context.cpp  context.hpp  logger.cpp  logger.hpp  mark_scope.hpp  mem_time.hpp  phase_accum.hpp  profiling.hpp  profiling_macros.hpp  spqr_rust_all.hpp  timer.hpp
test_graphs/: simple.gfa
